Updated shoelace base path so that icons are loaded correctly Update the node version for docker Wrapped the sender email from a user in a "mailto:*" link Changed the icon size of the sl-alert Added a check if the entered email address is a real email address

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -892,6 +892,10 @@ sl-alert::part(base) {
     z-index: 900;
 }
 
+sl-alert::part(icon) {
+    font-size: 32px;
+}
+
 footer *::selection {
     background-color: rgba(143, 156, 163, 0.5); /* secondary-400 */
 }
